--- a/block-BHaabk/styles.css
+++ b/block-BHaabk/styles.css
@@ -128,6 +128,9 @@ table {
   border-spacing: 0;
 }
 
+*{
+    box-sizing: border-box;
+}
 body {
   background-color: rgb(194, 153, 178);
   font-family: "Courier New", Courier, monospace;
@@ -224,8 +227,8 @@ nav a {
   padding: 2%;
 }
 .gallery img {
-  width: 300px;
-  height: 280px;
+  width: 400px;
+  height: 300px;
   padding: 2%;
   border-radius: 20%;
 }
