--- a/block-BHaabk/styles.css
+++ b/block-BHaabk/styles.css
@@ -203,18 +203,19 @@ nav a {
 }
 
 .content {
-  width: 45%;
+  width: 50%;
   text-align: center;
-  padding: 2% 1% 0 0;
+  padding: 2% 0 0 0;
 }
 .cake-image {
   width: 50%;
   text-align: right;
+  padding:2% 0 0 0;
 }
 .cake-image img {
-  width: 80%;
+  width: 90%;
   height: 80%;
-  padding: 2% 0 2% 0;
+  
   border-radius: 20px;
 }
 
@@ -224,13 +225,13 @@ nav a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 2%;
+  padding: 2% 0%;
 }
 .gallery img {
   width: 400px;
   height: 300px;
-  padding: 2%;
-  border-radius: 20%;
+  padding: 2% 0%;
+  border-radius: 5%;
 }
 
 /* styling footer ----------------------------------------------------------------------------------------------- */
